--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -1,1 +1,20 @@
 /* Add CSS Styling */
+
+.odd {
+    background-color: pink;
+    font-family: Verdana, "DejaVu Sans", sans-serif;
+}
+
+#one {
+    color:blue;
+    font-size: 36px;
+}
+
+#size {
+    font-size:24px;
+}
+
+.four{
+    background-color: lightgreen;
+    font-weight: bold;
+}
